# back-test

./: .gitignore  .gitmessage.txt  db.txt  manage.py  memo.txt  pyproject.toml
apps/account/: models.py  serializers.py  urls.py  views.py
apps/account/migrations/: 0001_initial.py
apps/bankcode/: apps.py  models.py
apps/bankcode/migrations/: 0001_initial.py
apps/transaction/: models.py  serializers.py  urls.py  views.py
apps/transaction/migrations/: 0001_initial.py
apps/user/: admin.py  models.py  oauth_urls.py  oauth_views.py  serializers.py  urls.py  views.py
apps/user/migrations/: 0001_initial.py
config/: asgi.py  wsgi.py
config/settings/: base.py  dev.py  prod.py
config/urls/: urls.py  urls_dev.py  urls_prod.py
static/css/: my_style.css
templates/: base.html
templates/auth/: email_verified_done.html  login.html  nickname.html  signup.html  signup_done.html
templates/include/: form.html  search_form.html
utils/: email.py  forms.py  jwt_serializers.py  models.py
